kubernetes/apps/network/envoy-gateway/config/gateway.yaml
---
# yaml-language-server: $schema=https://schemas.clustrs.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-external
  annotations:
    external-dns.kubernetes.io/target: "external.${DOMAIN_PROXII}"
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.kubernetes.io/hostname: "external.${DOMAIN_PROXII}"
      lbipam.cilium.io/ips: "10.60.0.230"
  listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      name: http
      port: 80
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: All
      name: https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - kind: Secret
            name: vwn-app-tls
          - kind: Secret
            name: vwn-casa-tls
          - kind: Secret
            name: vwn-io-tls
          - kind: Secret
            name: cluster-vwn-io-tls
          - kind: Secret
            name: apps-vwn-io-tls
        mode: Terminate
---
# yaml-language-server: $schema=https://schemas.clustrs.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-internal
  annotations:
    external-dns.kubernetes.io/target: "internal.${DOMAIN_PROXII}"
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.kubernetes.io/hostname: "internal.${DOMAIN_PROXII}"
      lbipam.cilium.io/ips: "10.60.0.231"
  listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      name: http
      port: 80
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: All
      name: https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - kind: Secret
            name: vwn-app-tls
          - kind: Secret
            name: vwn-casa-tls
          - kind: Secret
            name: vwn-io-tls
          - kind: Secret
            name: cluster-vwn-io-tls
          - kind: Secret
            name: apps-vwn-io-tls
        mode: Terminate
    - allowedRoutes:
        namespaces:
          from: All
      name: ssh
      port: 22
      protocol: TCP
